# ensemble-rules

./: .gitignore  Makefile  README.md  pyproject.toml
.plans/: 2026-04-22-v1-implementation-plan.plan.md
docs/: original-design-notes.md
examples/agent-rule-files/: README.md  coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/agent-skills/: README.md  coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/bash-scripts/: coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/claude-code-agentic-hooks/: README.md  coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/claude-code-slash-commands/: README.md  coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/claude-code-subagent-definitions/: README.md  coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/claude-md-project-memory-files/: README.md  coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/dbt-sql-models/: coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/dockerfiles/: coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/github-actions-workflows/: coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
examples/github-pr-and-issue-templates/: coverage-llm.md  coverage.md  meta.json  raw.json  synthesis.md
prompts/: kickoff-design-and-build.md  regenerate-artifacts.prompt.md
scripts/: canary.py
tests/: test_artifacts.py  test_coverage.py  test_parse.py  test_prompts.py  test_schema.py
(+60 files in other folders)
